--- a/index.html
+++ b/index.html
@@ -3,20 +3,40 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Will Hinkelman</title>
+    <script defer src="js/main.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <title>Will Hinkelman</title>
   </head>
   <body>
-  <section class="section">
     <div class="container">
-      <h1 class="title">
-        Hello World
-      </h1>
-      <p class="subtitle">
-        My first website with <strong>Bulma</strong>!
-      </p>
+        <nav class="navbar">
+            <div class="navbar-brand">
+                <a href="" class="navbar-item">Will Hinkelman</a>
+
+                <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarDrop">
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                </a>
+            </div>
+            <div id="navbarDrop" class="navbar-menu">
+                <div class="navbar-end">
+                    <a href="" class="navbar-item">About</a>
+                    <a href="" class="navbar-item">Contact</a>
+                </div>
+            </div>
+        </nav>
     </div>
-  </section>
+    <section class="section">
+        <div class="container">
+        <h1 class="title">
+            Hello World
+        </h1>
+        <p class="subtitle">
+            My first website with <strong>Bulma</strong>!
+        </p>
+        </div>
+    </section>
   </body>
 </html>
