--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script defer src="js/main.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
+    <link rel="stylesheet" href="cs/style.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <title>Will Hinkelman</title>
   </head>
-  <body>
+  <body class="has-navbar-fixed-top">
     <div class="container">
         <nav class="navbar">
             <div class="navbar-brand">
@@ -28,14 +29,16 @@
             </div>
         </nav>
     </div>
-    <section class="section">
-        <div class="container">
-        <h1 class="title">
-            Hello World
-        </h1>
-        <p class="subtitle">
-            My first website with <strong>Bulma</strong>!
-        </p>
+    <section class="section hero is-large hero-image fade">
+        <div class="hero-body">
+            <div class="container info">
+                <h1 class="title has-text-white">
+                    Will Hinkelman
+                </h1>
+                <h2 class="subtitle has-text-white">
+                    I am a full-stack software engineer with a background in analytics and problem solving.
+                </h2>
+            </div>
         </div>
     </section>
   </body>
