--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             </div>
         </nav>
     </div>
+
     <section class="section hero is-large hero-image fade">
         <div class="hero-body">
             <div class="container info">
@@ -41,5 +42,40 @@
             </div>
         </div>
     </section>
+
+    <section class="section section-spacing">
+        <div class="container">
+            <div class="columns is-variable is-8">
+                <div class="column is-6">
+                    <div class="image-container">
+                        <figure class="image is-4by3 image-border">
+                            <a href="https://cocktail-finder2020.herokuapp.com/">
+                                <img src="./images/drink-page.jpg" alt="Cocktail">
+                            </a>
+                        </figure>
+                    </div>
+                </div>
+                <div class="column project-details">
+                    <h1 class="title">
+                        Cocktail
+                    </h1>
+                    <h2 class="subtitle">
+                        Cocktail is a website that uses an API allowing one to search for any cocktail and find out its ingredients and recipe. Users can then save the cocktails they like.
+                    </h2>
+                    <h1>
+                        <strong>Technologies:</strong>
+                        <br>
+                        React.js | Node.js | MongoDB | Mongoose | Express | JWT | JSX | Javascripts | HTML5 | CSS | Heroku | TheCocktailDB
+                    </h1>
+                    <br>
+                    <div>
+                        <a href="https://cocktail-finder2020.herokuapp.com/" class="button is-info">Go to Site</a>
+                        <a href="https://github.com/hink123/cocktail" class="button is-info">See the Code</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
   </body>
 </html>
