--- a/index.html
+++ b/index.html
@@ -56,21 +56,123 @@
                     </div>
                 </div>
                 <div class="column project-details">
-                    <h1 class="title">
+                    <h1 class="title info-spacing">
                         Cocktail
                     </h1>
                     <h2 class="subtitle">
                         Cocktail is a website that uses an API allowing one to search for any cocktail and find out its ingredients and recipe. Users can then save the cocktails they like.
                     </h2>
                     <h1>
-                        <strong>Technologies:</strong>
+                        <strong >Technologies:</strong>
                         <br>
                         React.js | Node.js | MongoDB | Mongoose | Express | JWT | JSX | Javascripts | HTML5 | CSS | Heroku | TheCocktailDB
                     </h1>
-                    <br>
+                    <br><br>
                     <div>
                         <a href="https://cocktail-finder2020.herokuapp.com/" class="button is-info">Go to Site</a>
                         <a href="https://github.com/hink123/cocktail" class="button is-info">See the Code</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section section-spacing">
+        <div class="container">
+            <div class="columns is-variable is-8">
+                <div class="column project-details">
+                    <h1 class="title info-spacing">
+                        Junkie
+                    </h1>
+                    <h2 class="subtitle">
+                        A place where vinyl and comic collectors can go to to input their collection, organize, and share their items with other likeminded collectors. This was a project built with two classmates
+                    </h2>
+                    <h1>
+                        <strong >Technologies:</strong>
+                        <br>
+                        Django | Python | PostgreSQL | Passport | Amazon Web Services | HTML5 | CSS | Heroku
+                    </h1>
+                    <br><br>
+                    <div>
+                        <a href="https://collection-junkie.herokuapp.com/" class="button is-info">Go to Site</a>
+                        <a href="https://github.com/hink123/junkie" class="button is-info">See the Code</a>
+                    </div>
+                </div>
+                <div class="column is-6">
+                    <div class="image-container">
+                        <figure class="image is-4by3 image-border">
+                            <a href="https://collection-junkie.herokuapp.com/">
+                                <img src="./images/vendetta.jpg" alt="Junkie">
+                            </a>
+                        </figure>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section section-spacing">
+        <div class="container">
+            <div class="columns is-variable is-8">
+                <div class="column is-6">
+                    <div class="image-container">
+                        <figure class="image is-4by3 image-border">
+                            <a href="https://hink123.github.io/simon/">
+                                <img src="./images/simon-image.jpg" alt="Simon">
+                            </a>
+                        </figure>
+                    </div>
+                </div>
+                <div class="column project-details">
+                    <h1 class="title info-spacing">
+                        Simon
+                    </h1>
+                    <h2 class="subtitle">
+                        Simon is a Classic memory game that uses asynchronous recursive functions to show Simon’s selections.
+                    </h2>
+                    <h1>
+                        <strong >Technologies:</strong>
+                        <br>
+                        Javascripts | HTML5 | CSS 
+                    </h1>
+                    <br><br>
+                    <div>
+                        <a href="https://hink123.github.io/simon/" class="button is-info">Go to Site</a>
+                        <a href="https://github.com/hink123/simon" class="button is-info">See the Code</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section section-spacing">
+        <div class="container">
+            <div class="columns is-variable is-8">
+                <div class="column project-details">
+                    <h1 class="title info-spacing">
+                        Session
+                    </h1>
+                    <h2 class="subtitle">
+                        Social surf website that uses an API to obtain 7-day forecasts for all Los Angeles surf locations. Users are able to post a surf session or comment on someone else’s.
+                    </h2>
+                    <h1>
+                        <strong >Technologies:</strong>
+                        <br>
+                        Node.js | MongoDB | Mongoose | Express | EJS | Javascripts | HTML5 | CSS | Heroku | SpitcastApi
+                    </h1>
+                    <br><br>
+                    <div>
+                        <a href="https://cocktail-finder2020.herokuapp.com/" class="button is-info">Go to Site</a>
+                        <a href="https://github.com/hink123/session" class="button is-info">See the Code</a>
+                    </div>
+                </div>
+                <div class="column is-6">
+                    <div class="image-container">
+                        <figure class="image is-4by3 image-border">
+                            <a href="https://cocktail-finder2020.herokuapp.com/">
+                                <img src="./images/home.jpg" alt="Session">
+                            </a>
+                        </figure>
                     </div>
                 </div>
             </div>
