--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Will Hinkelman</title>
   </head>
   <body class="has-navbar-fixed-top">
-    <div class="container">
+    <div class="container nav">
         <nav class="navbar">
             <div class="navbar-brand">
                 <a href="" class="navbar-item">Will Hinkelman</a>
@@ -43,141 +43,172 @@
         </div>
     </section>
 
-    <section class="section section-spacing">
-        <div class="container">
-            <div class="columns is-variable is-8">
-                <div class="column is-6">
-                    <div class="image-container">
-                        <figure class="image is-4by3 image-border">
-                            <a href="https://cocktail-finder2020.herokuapp.com/">
-                                <img src="./images/drink-page.jpg" alt="Cocktail">
-                            </a>
-                        </figure>
+    <div class="content-body">
+        <section class="section section-spacing">
+            <div class="container">
+                <div class="columns is-variable is-8">
+                    <div class="column is-6">
+                        <div class="image-container">
+                            <figure class="image is-4by3 image-border">
+                                <a href="https://cocktail-finder2020.herokuapp.com/">
+                                    <img src="./images/drink-page.jpg" alt="Cocktail">
+                                </a>
+                            </figure>
+                        </div>
                     </div>
-                </div>
-                <div class="column project-details">
-                    <h1 class="title info-spacing">
-                        Cocktail
-                    </h1>
-                    <h2 class="subtitle">
-                        Cocktail is a website that uses an API allowing one to search for any cocktail and find out its ingredients and recipe. Users can then save the cocktails they like.
-                    </h2>
-                    <h1>
-                        <strong >Technologies:</strong>
-                        <br>
-                        React.js | Node.js | MongoDB | Mongoose | Express | JWT | JSX | Javascripts | HTML5 | CSS | Heroku | TheCocktailDB
-                    </h1>
-                    <br><br>
-                    <div>
-                        <a href="https://cocktail-finder2020.herokuapp.com/" class="button is-info">Go to Site</a>
-                        <a href="https://github.com/hink123/cocktail" class="button is-info">See the Code</a>
+                    <div class="column project-details">
+                        <h1 class="title info-spacing has-text-white">
+                            Cocktail
+                        </h1>
+                        <h2 class="subtitle has-text-white">
+                            Cocktail is a website that uses an API allowing one to search for any cocktail and find out its ingredients and recipe. Users can then save the cocktails they like.
+                        </h2>
+                        <h1 class="has-text-white">
+                            <strong class="has-text-white">Technologies:</strong>
+                            <br>
+                            React.js | Node.js | MongoDB | Mongoose | Express | JWT | JSX | Javascripts | HTML5 | CSS | Heroku | TheCocktailDB
+                        </h1>
+                        <br><br>
+                        <div>
+                            <a href="https://cocktail-finder2020.herokuapp.com/" class="button is-info">Go to Site</a>
+                            <a href="https://github.com/hink123/cocktail" class="button is-info">See the Code</a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <section class="section section-spacing">
-        <div class="container">
-            <div class="columns is-variable is-8">
-                <div class="column project-details">
-                    <h1 class="title info-spacing">
-                        Junkie
-                    </h1>
-                    <h2 class="subtitle">
-                        A place where vinyl and comic collectors can go to to input their collection, organize, and share their items with other likeminded collectors. This was a project built with two classmates
-                    </h2>
-                    <h1>
-                        <strong >Technologies:</strong>
-                        <br>
-                        Django | Python | PostgreSQL | Passport | Amazon Web Services | HTML5 | CSS | Heroku
-                    </h1>
-                    <br><br>
-                    <div>
-                        <a href="https://collection-junkie.herokuapp.com/" class="button is-info">Go to Site</a>
-                        <a href="https://github.com/hink123/junkie" class="button is-info">See the Code</a>
+        <section class="section section-spacing">
+            <div class="container">
+                <div class="columns is-variable is-8">
+                    <div class="column project-details">
+                        <h1 class="title info-spacing has-text-white">
+                            Junkie
+                        </h1>
+                        <h2 class="subtitle has-text-white">
+                            A place where vinyl and comic collectors can go to to input their collection, organize, and share their items with other likeminded collectors. This was a project built with two classmates
+                        </h2>
+                        <h1 class="has-text-white">
+                            <strong class="has-text-white">Technologies:</strong>
+                            <br>
+                            Django | Python | PostgreSQL | Passport | Amazon Web Services | HTML5 | CSS | Heroku
+                        </h1>
+                        <br><br>
+                        <div>
+                            <a href="https://collection-junkie.herokuapp.com/" class="button is-info">Go to Site</a>
+                            <a href="https://github.com/hink123/junkie" class="button is-info">See the Code</a>
+                        </div>
                     </div>
-                </div>
-                <div class="column is-6">
-                    <div class="image-container">
-                        <figure class="image is-4by3 image-border">
-                            <a href="https://collection-junkie.herokuapp.com/">
-                                <img src="./images/vendetta.jpg" alt="Junkie">
-                            </a>
-                        </figure>
+                    <div class="column is-6">
+                        <div class="image-container">
+                            <figure class="image is-4by3 image-border">
+                                <a href="https://collection-junkie.herokuapp.com/">
+                                    <img src="./images/vendetta.jpg" alt="Junkie">
+                                </a>
+                            </figure>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <section class="section section-spacing">
-        <div class="container">
-            <div class="columns is-variable is-8">
-                <div class="column is-6">
-                    <div class="image-container">
-                        <figure class="image is-4by3 image-border">
-                            <a href="https://hink123.github.io/simon/">
-                                <img src="./images/simon-image.jpg" alt="Simon">
-                            </a>
-                        </figure>
+        <section class="section section-spacing">
+            <div class="container">
+                <div class="columns is-variable is-8">
+                    <div class="column is-6">
+                        <div class="image-container">
+                            <figure class="image is-4by3 image-border">
+                                <a href="https://hink123.github.io/simon/">
+                                    <img src="./images/simon-image.jpg" alt="Simon">
+                                </a>
+                            </figure>
+                        </div>
                     </div>
-                </div>
-                <div class="column project-details">
-                    <h1 class="title info-spacing">
-                        Simon
-                    </h1>
-                    <h2 class="subtitle">
-                        Simon is a Classic memory game that uses asynchronous recursive functions to show Simon’s selections.
-                    </h2>
-                    <h1>
-                        <strong >Technologies:</strong>
-                        <br>
-                        Javascripts | HTML5 | CSS 
-                    </h1>
-                    <br><br>
-                    <div>
-                        <a href="https://hink123.github.io/simon/" class="button is-info">Go to Site</a>
-                        <a href="https://github.com/hink123/simon" class="button is-info">See the Code</a>
+                    <div class="column project-details">
+                        <h1 class="title info-spacing has-text-white">
+                            Simon
+                        </h1>
+                        <h2 class="subtitle has-text-white">
+                            Simon is a Classic memory game that uses asynchronous recursive functions to show Simon’s selections.
+                        </h2>
+                        <h1 class="has-text-white">
+                            <strong class="has-text-white">Technologies:</strong>
+                            <br>
+                            Javascripts | HTML5 | CSS 
+                        </h1>
+                        <br><br>
+                        <div>
+                            <a href="https://hink123.github.io/simon/" class="button is-info">Go to Site</a>
+                            <a href="https://github.com/hink123/simon" class="button is-info">See the Code</a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <section class="section section-spacing">
-        <div class="container">
-            <div class="columns is-variable is-8">
-                <div class="column project-details">
-                    <h1 class="title info-spacing">
-                        Session
-                    </h1>
-                    <h2 class="subtitle">
-                        Social surf website that uses an API to obtain 7-day forecasts for all Los Angeles surf locations. Users are able to post a surf session or comment on someone else’s.
-                    </h2>
-                    <h1>
-                        <strong >Technologies:</strong>
-                        <br>
-                        Node.js | MongoDB | Mongoose | Express | EJS | Javascripts | HTML5 | CSS | Heroku | SpitcastApi
-                    </h1>
-                    <br><br>
-                    <div>
-                        <a href="https://cocktail-finder2020.herokuapp.com/" class="button is-info">Go to Site</a>
-                        <a href="https://github.com/hink123/session" class="button is-info">See the Code</a>
+        <section class="section section-spacing">
+            <div class="container">
+                <div class="columns is-variable is-8">
+                    <div class="column project-details">
+                        <h1 class="title info-spacing has-text-white">
+                            Session
+                        </h1>
+                        <h2 class="subtitle has-text-white">
+                            Social surf website that uses an API to obtain 7-day forecasts for all Los Angeles surf locations. Users are able to post a surf session or comment on someone else’s.
+                        </h2>
+                        <h1 class="has-text-white">
+                            <strong class="has-text-white">Technologies:</strong>
+                            <br>
+                            Node.js | MongoDB | Mongoose | Express | EJS | Javascripts | HTML5 | CSS | Heroku | SpitcastApi
+                        </h1>
+                        <br><br>
+                        <div>
+                            <a href="https://cocktail-finder2020.herokuapp.com/" class="button is-info">Go to Site</a>
+                            <a href="https://github.com/hink123/session" class="button is-info">See the Code</a>
+                        </div>
                     </div>
-                </div>
-                <div class="column is-6">
-                    <div class="image-container">
-                        <figure class="image is-4by3 image-border">
-                            <a href="https://cocktail-finder2020.herokuapp.com/">
-                                <img src="./images/home.jpg" alt="Session">
-                            </a>
-                        </figure>
+                    <div class="column is-6">
+                        <div class="image-container">
+                            <figure class="image is-4by3 image-border">
+                                <a href="https://cocktail-finder2020.herokuapp.com/">
+                                    <img src="./images/home.jpg" alt="Session">
+                                </a>
+                            </figure>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+
+        <section class="section bio-spacing">
+            <div class="container">
+                <div class="column">
+                    <h1 class="title has-text-white">
+                        Skills: 
+                    </h1>
+                    <h2 class="subtitle has-text-white">
+                        JAVASCRIPT | REACT |  EXPRESS  | MONGODB | MONGOOSE | SQL | POSTGRESQL | PYTHON | DJANGO | JQUERY | NODE.JS |  HTML |  CSS | AWS | JWT | OAUTH | SOCKET.IO | BOOTSTRAP | BULMA | GIT | HEROKU | C++ | TRELLO | STATA
+                    </h2>
+                </div>
+            </div>
+        </section>
+
+        <section class="section bio-spacing">
+            <div class="container">
+                <div class="column">
+                    <h1 class="title has-text-white">
+                        About Me: 
+                    </h1>
+                    <h2 class="subtitle has-text-white">
+                        I am a full-stack software engineer with a background in analytics and problem solving.
+                        Recently, I graduated from UCLA with a degree in Economics, however, I continued my education through General Assembly's Software Engineering Immersive program. 
+                        I enjoy working on a team building projects and solving difficult problems.
+                    </h2>
+                    <a href="./images/Resume 2020.pdf" target="_blank" class="button is-info">View Resume</a>
+                </div>
+            </div>
+        </section>
+    </div>
 
   </body>
 </html>
