--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         </section>
 
         <section class="section bio-spacing">
-            <div class="container">
+            <div class="container info-spacing">
                 <div class="column">
                     <h1 class="title has-text-white">
                         About Me: 
@@ -209,6 +209,17 @@
             </div>
         </section>
     </div>
+    <footer class="footer">
+        <div class="content has-text-centered">
+            <h1 class="has-text-white">
+                Contact Me: will.hink24@gmail.com
+            </h1>
+            <div>
+                <a href="https://github.com/hink123" class="button is-info btn-spacing">GitHub</a>
+                <a href="https://www.linkedin.com/in/will-hinkelman/" class="button is-info">LinkedIn</a>
+            </div>
+        </div>
+    </footer>
 
   </body>
 </html>
