--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <h1 class="has-text-white">
                             <strong class="has-text-white">Technologies:</strong>
                             <br>
-                            React.js | Node.js | MongoDB | Mongoose | Express | JWT | JSX | Javascripts | HTML5 | CSS | Heroku | TheCocktailDB
+                            React.js | Node.js | MongoDB | Mongoose | Express | JWT | JSX | Javascript | HTML5 | CSS | Heroku | TheCocktailDB
                         </h1>
                         <br><br>
                         <div>
@@ -87,7 +87,7 @@
                             Junkie
                         </h1>
                         <h2 class="subtitle has-text-white">
-                            A place where vinyl and comic collectors can go to to input their collection, organize, and share their items with other likeminded collectors. This was a project built with two classmates
+                            A place where vinyl and comic junkies can go to input their collection, organize, and share their items with other likeminded collectors. This was a project built with two classmates.
                         </h2>
                         <h1 class="has-text-white">
                             <strong class="has-text-white">Technologies:</strong>
@@ -130,12 +130,12 @@
                             Simon
                         </h1>
                         <h2 class="subtitle has-text-white">
-                            Simon is a Classic memory game that uses asynchronous recursive functions to show Simon’s selections.
+                            Simon is a classic memory game that uses asynchronous recursive functions to show Simon’s selections.
                         </h2>
                         <h1 class="has-text-white">
                             <strong class="has-text-white">Technologies:</strong>
                             <br>
-                            Javascripts | HTML5 | CSS 
+                            Javascript | HTML5 | CSS 
                         </h1>
                         <br><br>
                         <div>
@@ -160,7 +160,7 @@
                         <h1 class="has-text-white">
                             <strong class="has-text-white">Technologies:</strong>
                             <br>
-                            Node.js | MongoDB | Mongoose | Express | EJS | Javascripts | HTML5 | CSS | Heroku | SpitcastApi
+                            Node.js | MongoDB | Mongoose | Express | EJS | Javascript | HTML5 | CSS | Heroku | SpitcastAPI
                         </h1>
                         <br><br>
                         <div>
