--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <div class="column is-6">
                         <div class="image-container">
                             <figure class="image is-4by3 image-border">
-                                <a href="https://cocktail-finder2020.herokuapp.com/">
+                                <a href="https://session-surf.herokuapp.com/">
                                     <img src="./images/home.jpg" alt="Session">
                                 </a>
                             </figure>
