--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         </h1>
                         <br><br>
                         <div>
-                            <a href="https://cocktail-finder2020.herokuapp.com/" class="button is-info">Go to Site</a>
+                            <a href="https://session-surf.herokuapp.com/" class="button is-info">Go to Site</a>
                             <a href="https://github.com/hink123/session" class="button is-info">See the Code</a>
                         </div>
                     </div>
