--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     <h2 class="subtitle has-text-white">
                         I am a full-stack software engineer with a background in analytics and problem solving.
                         Recently, I graduated from UCLA with a degree in Economics, however, I continued my education through General Assembly's Software Engineering Immersive program. 
-                        I enjoy working on a team building projects and solving difficult problems.
+                        I enjoy working on a team building projects and solving difficult challenges.
                     </h2>
                     <a href="./images/Resume 2020.pdf" target="_blank" class="button is-info">View Resume</a>
                 </div>
