--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     <section class="section hero is-large hero-image fade" id="home">
         <div class="hero-body">
             <div class="container info">
-                <h1 class="title has-text-white">
+                <h1 class="title has-text-white main-blurb">
                     Will Hinkelman
                 </h1>
-                <h2 class="subtitle has-text-white">
+                <h2 class="subtitle has-text-white main-text">
                     I am a full-stack software engineer with a background in analytics and problem solving.
                 </h2>
             </div>
@@ -202,7 +202,7 @@
                     </h1>
                     <h2 class="subtitle has-text-white">
                         I am a full-stack software engineer with a background in analytics and problem solving.
-                        Recently, I graduated from UCLA with a degree in Economics, however, I continued my education through General Assembly's Software Engineering Immersive program. 
+                        Recently, I graduated from UCLA with a degree in Economics, and then continued my education through General Assembly's Software Engineering Immersive program. 
                         I enjoy working on a team building projects and solving difficult challenges.
                     </h2>
                     <a href="./images/Resume 2020.pdf" target="_blank" class="button is-info">View Resume</a>
