edited about section

--- a/index.html
+++ b/index.html
@@ -202,8 +202,9 @@
                     </h1>
                     <h2 class="subtitle has-text-white">
                         I am a full-stack software engineer with a background in analytics and problem solving.
-                        Recently, I graduated from UCLA with a degree in Economics, and then continued my education through General Assembly's Software Engineering Immersive program. 
-                        I enjoy working on a team building projects and solving difficult challenges.
+                        Recently, I graduated from UCLA with a degree in Economics. Then, wanting to continue my education I enrolled in General Assembly's Software Engineering Immersive program. 
+                        Having completed 420 hours of instruction I am ready to tackle real world challenges while also continuing my growth as developer.
+                        I look forward to working on a team building projects and solving difficult challenges together.
                     </h2>
                     <a href="./images/Resume 2020.pdf" target="_blank" class="button is-info">View Resume</a>
                 </div>
