--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
                         </h1>
                         <h2 class="subtitle has-text-white">
                             Cocktail is a website that uses an API allowing one to search for any cocktail and find out its ingredients and recipe. Users can then save the cocktails they like.
+                            <br><br>
+                            Login: sample@gmail.com
+                            <br>
+                            Password: sample123
                         </h2>
                         <h1 class="has-text-white">
                             <strong class="has-text-white">Technologies:</strong>
