--- a/index.html
+++ b/index.html
@@ -45,6 +45,45 @@
     </section>
 
     <div class="content-body">
+
+        <section class="section section-spacing">
+            <div class="container">
+                <div class="columns is-variable is-8">
+                    <div class="column project-details">
+                        <h1 class="title info-spacing has-text-white">
+                            Foreign Exchange
+                        </h1>
+                        <h2 class="subtitle has-text-white">
+                            Foreign Exchange is a mobile friendly single-page web application that allows users to track exchange rates over different time intervals. Logged-In users can save rates to a favorites list. 
+                            <br><br>
+                            Login: user@gmail.com
+                            <br>
+                            Password: user
+                        </h2>
+                        <h1 class="has-text-white">
+                            <strong class="has-text-white">Technologies:</strong>
+                            <br>
+                            React.js | Node.js | MongoDB | Mongoose | Express | JWT | JSX | Javascript | HTML5 | CSS | Heroku | Alpha Vantage API | CanvasJS
+                        </h1>
+                        <br><br>
+                        <div>
+                            <a href="https://fx-tracker.herokuapp.com/" class="button is-info">Go to Site</a>
+                            <a href="https://github.com/hink123/foreign-exchange" class="button is-info">See the Code</a>
+                        </div>
+                    </div>
+                    <div class="column is-6">
+                        <div class="image-container">
+                            <figure class="image is-4by3 image-border">
+                                <a href="https://fx-tracker.herokuapp.com/">
+                                    <img src="./images/fx-graph.jpg" alt="Session">
+                                </a>
+                            </figure>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="section section-spacing">
             <div class="container">
                 <div class="columns is-variable is-8">
@@ -145,40 +184,6 @@
                         <div>
                             <a href="https://hink123.github.io/simon/" class="button is-info">Go to Site</a>
                             <a href="https://github.com/hink123/simon" class="button is-info">See the Code</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="section section-spacing">
-            <div class="container">
-                <div class="columns is-variable is-8">
-                    <div class="column project-details">
-                        <h1 class="title info-spacing has-text-white">
-                            Session
-                        </h1>
-                        <h2 class="subtitle has-text-white">
-                            Social surf website that uses an API to obtain 7-day forecasts for all Los Angeles surf locations. Users are able to post a surf session or comment on someone else’s.
-                        </h2>
-                        <h1 class="has-text-white">
-                            <strong class="has-text-white">Technologies:</strong>
-                            <br>
-                            Node.js | MongoDB | Mongoose | Express | EJS | Javascript | HTML5 | CSS | Heroku | SpitcastAPI
-                        </h1>
-                        <br><br>
-                        <div>
-                            <a href="https://session-surf.herokuapp.com/" class="button is-info">Go to Site</a>
-                            <a href="https://github.com/hink123/session" class="button is-info">See the Code</a>
-                        </div>
-                    </div>
-                    <div class="column is-6">
-                        <div class="image-container">
-                            <figure class="image is-4by3 image-border">
-                                <a href="https://session-surf.herokuapp.com/">
-                                    <img src="./images/home.jpg" alt="Session">
-                                </a>
-                            </figure>
                         </div>
                     </div>
                 </div>
