--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                         Having completed 420 hours of instruction I am ready to tackle real world challenges while also continuing my growth as developer.
                         I look forward to working on a team building projects and solving difficult challenges together.
                     </h2>
-                    <a href="./images/Resume 2020.pdf" target="_blank" class="button is-info">View Resume</a>
+                    <a href="./images/Will_Hinkelman_Resume.pdf" target="_blank" class="button is-info">View Resume</a>
                 </div>
             </div>
         </section>
