update resume and skills

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                         Skills: 
                     </h1>
                     <h2 class="subtitle has-text-white">
-                        JAVASCRIPT | REACT |  EXPRESS  | MONGODB | MONGOOSE | SQL | POSTGRESQL | PYTHON | DJANGO | JQUERY | NODE.JS |  HTML |  CSS | AWS | JWT | OAUTH | SOCKET.IO | BOOTSTRAP | BULMA | GIT | HEROKU | C++ | TRELLO | STATA
+                        JAVASCRIPT | PYTHON | REACT |  SQL | AWS | JQUERY |  NODE.JS |  CSS |  HTML | DOCKER | EXPRESS | MONGODB | POSTGRESQL | DJANGO | JSON WEB TOKENS | OAUTH | SOCKET.IO | BOOTSTRAP | MOCHA | GIT | HEROKU | C++ | SALESFORCE | ZENDESK | JIRA | LOOKER | TRELLO 
                     </h2>
                 </div>
             </div>
@@ -215,7 +215,7 @@
                         Having completed 420 hours of instruction I am ready to tackle real world challenges while also continuing my growth as developer.
                         I look forward to working on a team building projects and solving difficult challenges together.
                     </h2>
-                    <a href="./images/Will_Hinkelman_Resume.pdf" target="_blank" class="button is-info">View Resume</a>
+                    <a href="./images/Resume_2022.pdf" target="_blank" class="button is-info">View Resume</a>
                 </div>
             </div>
         </section>
